--- a/Okomaz-ios/LoginViewController.storyboard
+++ b/Okomaz-ios/LoginViewController.storyboard
@@ -226,22 +226,63 @@
                                     <action selector="registerAccountMember:" destination="8Fk-e3-qGt" eventType="touchUpInside" id="JeJ-9V-cRc"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PLu-ii-qgH" customClass="MRCountryPicker" customModule="MRCountryPicker">
+                                <rect key="frame" x="24" y="251" width="327" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="KfL-dE-TeM"/>
+                                </constraints>
+                            </pickerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7HX-jB-QEY">
+                                <rect key="frame" x="73" y="148" width="229.5" height="30"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mYb-Ig-w1I">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="bR0-rL-20X"/>
+                                            <constraint firstAttribute="height" constant="30" id="cgs-qW-HQr"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3X-43-yet">
+                                        <rect key="frame" x="40" y="0.0" width="20.5" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20.5" id="Sug-te-ddI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SELECT YOUR COUNTRY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWf-6B-MfL">
+                                        <rect key="frame" x="60.5" y="0.0" width="169" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jRJ-Oz-WDt" secondAttribute="trailing" id="2EF-1O-nO3"/>
+                            <constraint firstItem="mQg-pM-DI2" firstAttribute="leading" secondItem="PLu-ii-qgH" secondAttribute="leading" id="3RQ-O9-CUm"/>
                             <constraint firstItem="mQg-pM-DI2" firstAttribute="trailing" secondItem="1Ur-i1-T7N" secondAttribute="trailing" id="ADu-Cu-HDf"/>
                             <constraint firstItem="1Ur-i1-T7N" firstAttribute="top" secondItem="mQg-pM-DI2" secondAttribute="bottom" constant="8" symbolic="YES" id="Fpq-rQ-buN"/>
                             <constraint firstItem="ITn-cn-0Wc" firstAttribute="top" secondItem="jRJ-Oz-WDt" secondAttribute="bottom" id="Ijb-wd-gkY"/>
                             <constraint firstItem="jRJ-Oz-WDt" firstAttribute="leading" secondItem="M0S-K4-Nyv" secondAttribute="leading" id="KdA-4S-SQJ"/>
+                            <constraint firstItem="mQg-pM-DI2" firstAttribute="trailing" secondItem="PLu-ii-qgH" secondAttribute="trailing" id="NzP-sj-3aI"/>
                             <constraint firstItem="mQg-pM-DI2" firstAttribute="leading" secondItem="1Ur-i1-T7N" secondAttribute="leading" id="PgS-Zy-tnD"/>
+                            <constraint firstItem="jRJ-Oz-WDt" firstAttribute="top" secondItem="7HX-jB-QEY" secondAttribute="bottom" constant="-178" id="Wkp-SN-g5B"/>
                             <constraint firstItem="mQg-pM-DI2" firstAttribute="centerX" secondItem="jRJ-Oz-WDt" secondAttribute="centerX" id="YxV-zY-8sc"/>
+                            <constraint firstItem="7HX-jB-QEY" firstAttribute="centerX" secondItem="jRJ-Oz-WDt" secondAttribute="centerX" id="Zqu-QG-cKc"/>
                             <constraint firstItem="mQg-pM-DI2" firstAttribute="leading" secondItem="M0S-K4-Nyv" secondAttribute="leadingMargin" constant="8" id="bXp-Ub-2X6"/>
                             <constraint firstItem="ITn-cn-0Wc" firstAttribute="top" secondItem="1Ur-i1-T7N" secondAttribute="bottom" constant="119" id="n5G-1w-qqy"/>
                             <constraint firstItem="jRJ-Oz-WDt" firstAttribute="top" secondItem="M0S-K4-Nyv" secondAttribute="top" id="sA5-3o-lyk"/>
+                            <constraint firstItem="jRJ-Oz-WDt" firstAttribute="top" secondItem="PLu-ii-qgH" secondAttribute="bottom" constant="-401" id="xQ1-Gk-HHJ"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="countryImage" destination="mYb-Ig-w1I" id="NXx-Jl-cQP"/>
+                        <outlet property="countryPicker" destination="PLu-ii-qgH" id="gbR-rg-JmN"/>
+                        <outlet property="selectedCountry" destination="hWf-6B-MfL" id="Wmt-qk-VBc"/>
                         <segue destination="1cz-KU-bvU" kind="show" identifier="navToSignUp" id="pjs-oO-LiP"/>
                     </connections>
                 </viewController>
